# zk_stark_project

./: .gitignore  Cargo.toml  README.md  requirements.txt
aggregation_seperated/: helper.rs  lib.rs  main.rs
aggregation_seperated/aggregation/: air.rs  prover.rs
analytics/: measure_stark_aggregator.py
benches/: bench_mimc.rs
devices/: main.py
devices/middleware/: aggregator.py  aggregator_selection.py  connection_manager.py  middleware.py
src/: debug.rs  helper.rs  lib.rs  main.rs  mock_data_test.rs  root.rs  root_old.rs  training.rs  training_aggregation_new.rs
src/old_code/: aggregation.rs  fibbonacci.rs  training_aggregation_old.rs
src/training/: air.rs  prover.rs
src_new/: helper.rs  main.rs  signed.rs
src_new/aggregation/: air.rs  prover.rs
src_new/tests/: prover_minibatch.rs
src_new/training/: air.rs  prover.rs
tests/: integration_tests.rs  simple_check.rs
verification/time_memory_analytics/: analyze.py  batch_automation.py  calculate_analytics_avg.py  plot_figures.py  visualize_benchmarks.py
verification/zokrates/: root.zok
verification/zokrates/aggregator/: verifier.sol
